--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
             
             <a href="https://github.com/MedDataMuse?tab=repositories">Voir mon Portfolio</a>
 <br>
-           <a href="ex_upw1.pdf" target="_blank">Exemple d'analyse basique à 79€!</a>
+           <a href="ex_upw1.pdf" target="_blank">Exemple d'analyse rapide</a>
         
         </section>
     </div>
