--- a/index.html
+++ b/index.html
@@ -406,7 +406,9 @@
             <a href="https://github.com/MedDataMuse?tab=repositories">Voir mon Portfolio</a>
 <br>
            <a href="ex_upw1.pdf" target="_blank">Exemple d'analyse rapide</a>
-        
+<br>
+        <a href="https://scohtml.github.io/service2/">Offre et tarifs</a>
+            
         </section>
     </div>
 
