--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 <br>
            <a href="ex_upw1.pdf" target="_blank">Exemple d'analyse rapide</a>
 <br>
-        <a href="https://scohtml.github.io/service2/">Offre et tarifs</a>
+        <a href="https://scohtml.github.io/tarif/">Offre et tarifs</a>
             
         </section>
     </div>
